// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`unprojectScreenXyToWorldXyzOnFace > xy(top) face > item at origin > 'back corner' : unprojectScreenXyToWorldXyzOnFace(screen={ x: +0, y: -20 }, position={ x: +0, y: +0, z: +0 }, aabb=undefined, face='xy') = { x: 10, y: 10, z: 10 } 1`] = `
{
  "x": 20,
  "y": 20,
  "z": 0,
}
`;

exports[`unprojectScreenXyToWorldXyzOnFace > xy(top) face > item at origin > 'back corner' : unprojectScreenXyToWorldXyzOnFace(screen={ x: +0, y: -20 }, position={ x: +0, y: +0, z: +0 }, aabb=undefined, face='xy') = undefined 1`] = `
{
  "x": 20,
  "y": 20,
  "z": 0,
}
`;

exports[`unprojectScreenXyToWorldXyzOnFace > xy(top) face > item at origin > 'front corner' : unprojectScreenXyToWorldXyzOnFace(screen={ x: +0, y: -10 }, position={ x: +0, y: +0, z: +0 }, aabb=undefined, face='xy') = { x: +0, y: +0, z: 10 } 1`] = `
{
  "x": 10,
  "y": 10,
  "z": 0,
}
`;

exports[`unprojectScreenXyToWorldXyzOnFace > xy(top) face > item at origin > 'front corner' : unprojectScreenXyToWorldXyzOnFace(screen={ x: +0, y: -10 }, position={ x: +0, y: +0, z: +0 }, aabb=undefined, face='xy') = undefined 1`] = `
{
  "x": 10,
  "y": 10,
  "z": 0,
}
`;

exports[`unprojectScreenXyToWorldXyzOnFace > xy(top) face > item at origin > 'visually left corner' : unprojectScreenXyToWorldXyzOnFace(screen={ x: -10, y: -15 }, position={ x: +0, y: +0, z: +0 }, aabb=undefined, face='xy') = { x: 10, y: +0, z: 10 } 1`] = `
{
  "x": 20,
  "y": 10,
  "z": 0,
}
`;

exports[`unprojectScreenXyToWorldXyzOnFace > xy(top) face > item at origin > 'visually left corner' : unprojectScreenXyToWorldXyzOnFace(screen={ x: -10, y: -15 }, position={ x: +0, y: +0, z: +0 }, aabb=undefined, face='xy') = undefined 1`] = `
{
  "x": 20,
  "y": 10,
  "z": 0,
}
`;
